# tidy-forge

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  pyproject.toml
.claude/: settings.local.json
apps/control-center/: pyproject.toml
apps/control-center/src/control_center/: __init__.py  __main__.py  cli.py
apps/disk-atlas/: pyproject.toml
apps/disk-atlas/src/disk_atlas/: __init__.py  __main__.py  cli.py
apps/media-curator/: pyproject.toml
apps/media-curator/src/media_curator/: __init__.py  __main__.py  cli.py  organize.py
apps/rename-studio/: pyproject.toml
apps/rename-studio/src/rename_studio/: __init__.py  __main__.py  cli.py
docs/architecture/: monorepo-overview.md  repo-layout.md
docs/decisions/: ADR-001-monorepo-structure.md
docs/naming/: naming-conventions.md
docs/product-roadmap/: phase-plan.md
infra/scripts/: bootstrap.py
notebooks/: organize_by_app.ipynb  organize_playground.ipynb  rename_playground.ipynb  rename_strip.ipynb  scanning_and_filtering.ipynb
tests/: conftest.py
tests/apps/: test_control_center_cli.py  test_disk_atlas_cli.py  test_media_curator_cli.py  test_rename_studio_cli.py
